--- a/src/test/resources/configs/configuration.properties
+++ b/src/test/resources/configs/configuration.properties
@@ -19,3 +19,5 @@ reportName=Hrms Execution Report
 dbUsername = syntax_hrm
 dbPassword = syntaxhrm123
 dbUrl = jdbc:mysql://166.62.36.207:3306/syntaxhrm_mysql
+
+headless = true
