--- a/pom.xml
+++ b/pom.xml
@@ -66,7 +66,7 @@
 				<version>3.0.0-M4</version>
 				<configuration>
 					<includes>
-						<include>**/*SmokeRunner.java</include>
+						<include>**/*RegressionRunner.java</include>
 					</includes>
 
 					<testFailureIgnore>true</testFailureIgnore>
