--- a/pom.xml
+++ b/pom.xml
@@ -3,7 +3,7 @@
 	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
 	<modelVersion>4.0.0</modelVersion>
 	<groupId>com.syntax</groupId>
-	<artifactId>Hrms</artifactId>
+	<artifactId>HrmsCucumber</artifactId>
 	<version>0.0.1-SNAPSHOT</version>
 
 	<properties>
@@ -66,7 +66,7 @@
 				<version>3.0.0-M4</version>
 				<configuration>
 					<includes>
-						<include>**/*RegressionRunner.java</include>
+						<include>**/*SmokeRunner.java</include>
 					</includes>
 
 					<testFailureIgnore>true</testFailureIgnore>
